--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -35,6 +35,13 @@
         <div class="details" style="border-color: {{color}};">
             Color: {{color}}
             <br>
+            Physical: {{physical}}
+            <br>
+            Mental: {{mental}}
+            <br>
+            Social: {{social}}
+            <br>
+
             <select id="breedSelect">
                 <option selected>Breed With</option>
                 {{#each otherKobold in kobolds}}
