--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -67,12 +67,12 @@
         <button class="js-quit-job">Quit job</button>
     {{/if}}
     <br>
-    <select id="breedSelect">
-        <option selected>Breed With</option>
+    <select style="background-color: {{breedTarget.color}}; color: {{breedTarget.textColor}};" class="js-breed-select" id="breedSelect">
+        <option selected style="background-color: white; color: black;">Breed With</option>
         {{#each otherKobold in kobolds}}
             {{#unless isCurrentKobold otherKobold._id}}
-                {{#unless otherIsBusy otherKobold._id}}
-                    <option style="color: {{otherKoboldColor otherKobold._id}};" value="{{otherKobold._id}}">{{otherKobold.name}}</option>
+                {{#unless otherKobold.busy}}
+                    <option style="background-color: {{otherKobold.color}}; color: {{otherKobold.textColor}}" value="{{otherKobold._id}}">{{otherKobold.name}}</option>
                 {{/unless}}
             {{/unless}}
         {{/each}}
@@ -81,8 +81,8 @@
     
     <br>
 
-    <select id="jobSelect">
-        <option selected>Chose job</option>
+    <select class="js-select-job" style="color: {{selectedJob.color}};" id="jobSelect">
+        <option selected style="color: black; background-color: white;">Chose job</option>
         {{#each job in jobs}}
             <option style="color: {{job.color}};" value="{{job.name}}">{{job.name}}</option>
         {{/each}}
@@ -126,7 +126,8 @@
             Currently working this job:
             <ul>
                 {{#each kobold in koboldsAtJob}}
-                    <li style="color: {{kobold.color}}">{{kobold.name}}</li>
+                    <li class="kobold-list" style="color: {{kobold.textColor}}; background-color: {{kobold.color}}">{{kobold.name}}</li>
+                    <br>
                 {{/each}}
             </ul>
             <br>
