--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -40,6 +40,13 @@
             {{/each}}
         </ul>
 
+        Buildings
+        <ul>
+            {{#each building in buildings}}
+            {{> showBuilding building}}
+            {{/each}}
+        </ul>
+
         Noticeboard
         <br>
         {{> noticeboard}}
@@ -67,7 +74,7 @@
     {{#each skill in skills}}
         <p style="color: {{skill.color}};">{{skill.name}} : {{skill.level}}</p>
     {{/each}}
-    Current job: {{#if job}}{{job}}{{else}}None{{/if}}
+    Current job: {{#if job}}{{job.name}}{{else}}None{{/if}}
     {{#if job}}
         <button class="js-quit-job">Quit job</button>
     {{/if}}
@@ -145,31 +152,50 @@
         {{name}}
     </div>
     {{#if showDetails}}
-<div class="details" style="border-color: {{color}};">
-    Your kobolds are looking for:
-    <br>
-    <ul>
-        {{#each resource in resources}}
-            <li>{{resource}}</li>
-        {{/each}}
-    </ul>
-    {{#each slot in slots}}
-        <select style="color: {{slot.textColor}}; background-color: {{ slot.color }};" class="js-party-select js-party-select-{{name}}" data-index="{{@index}}">
-            <option selected style="color: {{slot.textColor}}; background-color:{{slot.color}};">{{slot.name}}</option>
-            {{#each kobold in availableKobolds}}
-                <option style="background-color: {{ kobold.color }}; color:{{kobold.textColor}};" value="{{kobold._id}}">
-                    {{kobold.name}}
-                </option>
+        <div class="details" style="border-color: {{color}};">
+            Your kobolds are looking for:
+            <br>
+            <ul>
+                {{#each resource in resources}}
+                    <li>{{resource}}</li>
+                {{/each}}
+            </ul>
+            {{#each slot in slots}}
+                <select style="color: {{slot.textColor}}; background-color: {{ slot.color }};" class="js-party-select js-party-select-{{name}}" data-index="{{@index}}">
+                    <option selected style="color: {{slot.textColor}}; background-color:{{slot.color}};">{{slot.name}}</option>
+                    {{#each kobold in availableKobolds}}
+                        <option style="background-color: {{ kobold.color }}; color:{{kobold.textColor}};" value="{{kobold._id}}">
+                            {{kobold.name}}
+                        </option>
+                    {{/each}}
+                </select>
+                <br>
             {{/each}}
-        </select>
-        <br>
-    {{/each}}
-    <button class="js-launch-expo" disabled={{expoNotFilled}}>Launch expedition</button>
+            <button class="js-launch-expo" disabled={{expoNotFilled}}>Launch expedition</button>
 
-    <br>
-</div>
+            <br>
+        </div>
     {{/if}}
 </template>
+
+<template name="showBuilding">
+    <div class="clickable js-click-name" style="color: {{color}};">
+        {{name}}
+    </div>
+    {{#if showDetails}}
+        <div class="details" style="border-color: {{color}};">
+            {{#if level}}Level: {{level}} {{else}} Unbuilt {{/if}}
+            Cost:
+            {{#each cost in costs}}
+                {{cost.name}} : {{totalCost cost}}
+            {{/each}}
+            <button class="js-build" disabled={{cannotAfford}}>{{#if level}}Upgrade{{else}}Build{{/if}}</button>
+            
+        </div>
+    {{/if}}
+</template>
+
+
 
 <template name="noticeboard">
     <div class="noticeboard">
