--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -63,49 +63,49 @@
     </div>
 
     {{#if showDetails}}
-<div class="details" style="border-color: {{color}};">
-    Color: {{color}}
-    <br>
-    Level: {{level}}
-    <br>
-    Physical: {{physical}}
-    <br>
-    Mental: {{mental}}
-    <br>
-    Social: {{social}}
-    <br>
-    {{#each skill in skills}}
-        {{#if skill.level}}
-            <p style="color: {{skill.color}};">{{skill.name}} : {{skill.level}}</p>
-        {{/if}}
-    {{/each}}
-    Current job: {{#if job}}{{job.name}}{{else}}None{{/if}}
-    {{#if job}}
-        <button class="js-quit-job">Quit job</button>
-    {{/if}}
-    <br>
-    <select style="background-color: {{breedTarget.color}}; color: {{breedTarget.textColor}};" class="js-breed-select" id="breedSelect">
-        <option selected style="background-color: white; color: black;">Breed With</option>
-        {{#each otherKobold in kobolds}}
-            {{#unless isCurrentKobold otherKobold._id}}
-                {{#unless otherKobold.busy}}
-                    <option style="background-color: {{otherKobold.color}}; color: {{otherKobold.textColor}}" value="{{otherKobold._id}}">{{otherKobold.name}}</option>
-                {{/unless}}
-            {{/unless}}
-        {{/each}}
-    </select>
-    <button disabled={{isBusy}} class="js-breed">Confirm</button>
+        <div class="details" style="border-color: {{color}};">
+            Color: {{color}}
+            <br>
+            Level: {{level}}
+            <br>
+            Physical: {{physical}}
+            <br>
+            Mental: {{mental}}
+            <br>
+            Social: {{social}}
+            <br>
+            {{#each skill in skills}}
+                {{#if skill.level}}
+                    <p style="color: {{skill.color}};">{{skill.name}} : {{skill.level}}</p>
+                {{/if}}
+            {{/each}}
+            Current job: {{#if job}}{{job.name}}{{else}}None{{/if}}
+            {{#if job}}
+                <button class="js-quit-job">Quit job</button>
+            {{/if}}
+            <br>
+            <select style="background-color: {{breedTarget.color}}; color: {{breedTarget.textColor}};" class="js-breed-select" id="breedSelect">
+                <option selected style="background-color: white; color: black;">Breed With</option>
+                {{#each otherKobold in kobolds}}
+                    {{#unless isCurrentKobold otherKobold._id}}
+                        {{#unless otherKobold.busy}}
+                            <option style="background-color: {{otherKobold.color}}; color: {{otherKobold.textColor}}" value="{{otherKobold._id}}">{{otherKobold.name}}</option>
+                        {{/unless}}
+                    {{/unless}}
+                {{/each}}
+            </select>
+            <button title="Breeding requires an egg" disabled={{cannotAffordBreeding}} class="js-breed">Confirm</button>
     
-    <br>
+            <br>
 
-    <select class="js-select-job" style="color: {{selectedJob.color}};" id="jobSelect">
-        <option selected style="color: black; background-color: white;">Chose job</option>
-        {{#each job in jobs}}
-            <option style="color: {{job.color}};" value="{{job.name}}">{{job.name}}</option>
-        {{/each}}
-    </select>
-    <button disabled={{isBusy}} class="js-chose-job">Confirm</button>
-</div>
+            <select class="js-select-job" style="color: {{selectedJob.color}};" id="jobSelect">
+                <option selected style="color: black; background-color: white;">Chose job</option>
+                {{#each job in jobs}}
+                    <option style="color: {{job.color}};" value="{{job.name}}">{{job.name}}</option>
+                {{/each}}
+            </select>
+            <button disabled={{isBusy}} class="js-chose-job">Confirm</button>
+        </div>
     {{/if}}
     
     <br>
